Parte 3 do curso conculída

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head> <!-- Passa informações para o navegador / Tag de ESTRUTURA-->
 		<meta charset="UTF-8">
 		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style-home.css">
 	</head>
 
 	<body>
