--- a/produtos.html
+++ b/produtos.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8">
 		<title>Produtos - Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="produtos.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png"></h1>
+				<h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -43,8 +43,8 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png">
-			<p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
+			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
 
